--- a/internal/generator/templates/decode.go.tmpl
+++ b/internal/generator/templates/decode.go.tmpl
@@ -62,22 +62,31 @@
         {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $assign_str_lvalue "field" $field "native" $native }}
     {{- end }}
     {{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $assign_str_lvalue }}
-    if err = {{ $assign_str_rvalue }}.UnmarshalZserio(r); err != nil {
-        return err
-    }
     {{- if $field.Array }}
         {{- if or $native.IsMarshaler $native.RequiresCast }}
             {{- $element := "elem" }}
             {{- if $native.IsMarshaler }}
                 {{- $element = "*elem" }}
             {{- end }}
-            {{ $assign_str_lvalue }} = make([]{{ goType $scope $field.Type }}, 0, len({{ $field.Name }}ArrayProperties.RawArray))
-            for _, elem := range {{ $field.Name }}ArrayProperties.RawArray {
-                {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
+            {{- if $field.Array.Length }}
+            {{ $assign_str_lvalue }} = make([]{{ goType $scope $field.Type }}, 0, int({{ goExpression $scope $field.Array.Length }}))
+            {{- end }}
+            for elem, err := range {{ $field.Name }}ArrayProperties.UnmarshalZserioIter(r) {
+            if err != nil {
+                return err
             }
+            {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
+	    }
         {{- else }}
+            if err = {{ $assign_str_rvalue }}.UnmarshalZserio(r); err != nil {
+                return err
+            }
             {{ $assign_str_lvalue }} = {{ $field.Name }}ArrayProperties.RawArray
         {{- end }}
+    {{- else }}
+    if err = {{ $assign_str_rvalue }}.UnmarshalZserio(r); err != nil {
+        return err
+    }
     {{- end }}
 {{- end}}
 
