Refactor and extract ObjectArray handling
Signed-off-by: Jochen.Mehlhorn <jochen.mehlhorn@mercedes-benz.com>

--- a/internal/generator/templates/array_traits_type.go.tmpl
+++ b/internal/generator/templates/array_traits_type.go.tmpl
@@ -4,4 +4,4 @@
 {{- $traits }}
 {{- if eq $traits "ztype.BitFieldArrayTraits" }}[{{ goType $scope $type }}]{{- end -}}
 {{- if eq $traits "ztype.SignedBitFieldArrayTraits" }}[{{ goType $scope $type }}]{{- end -}}
-{{- if eq $traits "ztype.ObjectArrayTraits" }}[*{{ goType $scope $type }}]{{- end -}}
+{{- if eq $traits "ztype.ObjectArrayTraits" }}[{{ goType $scope $type }}, *{{ goType $scope $type }}]{{- end -}}
