--- a/internal/generator/templates/packing_context_decode.go.tmpl
+++ b/internal/generator/templates/packing_context_decode.go.tmpl
@@ -52,28 +52,37 @@
 {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $assign_str_lvalue "field" $field "native" $native }}
 {{- end }}
 
-{{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $assign_str_lvalue }}
+{{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $assign_str_lvalue "native" $native }}
 
 {{- if $field.Array }}
     {{- if not $field.Array.IsPacked }}
         // This array is implicitly packed, because its parent object is packed
         {{ $field.Name }}ArrayProperties.IsPacked = true
     {{- end }}
-    if err = {{ $field.Name }}ArrayProperties.UnmarshalZserio(r); err != nil {
-        return err
-    }
-    {{- if or $native.IsMarshaler $native.RequiresCast }}
-        {{- $element := "elem" }}
-        {{- if $native.IsMarshaler }}
-            {{- $element = "*elem" }}
-        {{- end }}
-        {{ $assign_str_lvalue }} = make([]{{ goType $scope $field.Type }}, 0, len({{ $field.Name }}ArrayProperties.RawArray))
-        for _, elem := range {{ $field.Name }}ArrayProperties.RawArray {
-            {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
+
+    {{- $traits := goArrayTraits $scope $native.Type }}
+    {{- if eq $traits "ztype.ObjectArrayTraits" }}
+        if {{ $assign_str_lvalue }}, err = {{ $field.Name }}ArrayProperties.UnmarshalZserio(r); err != nil {
+            return err
         }
     {{- else }}
-        {{ $assign_str_lvalue }} = {{ $field.Name }}ArrayProperties.RawArray
+        if err = {{ $field.Name }}ArrayProperties.UnmarshalZserio(r); err != nil {
+            return err
+        }
+        {{- if or $native.IsMarshaler $native.RequiresCast }}
+            {{- $element := "elem" }}
+            {{- if $native.IsMarshaler }}
+                {{- $element = "*elem" }}
+            {{- end }}
+            {{ $assign_str_lvalue }} = make([]{{ goType $scope $field.Type }}, 0, len({{ $field.Name }}ArrayProperties.RawArray))
+            for _, elem := range {{ $field.Name }}ArrayProperties.RawArray {
+                {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
+            }
+        {{- else }}
+            {{ $assign_str_lvalue }} = {{ $field.Name }}ArrayProperties.RawArray
+        {{- end }}
     {{- end }}
+   
 
 {{- else if $native.IsMarshaler }}
     if err = {{ $assign_str_rvalue }}.UnmarshalZserioPacked(childrenNodes[{{ $index }}], r); err != nil {
