--- a/internal/generator/templates/packing_context_init.go.tmpl
+++ b/internal/generator/templates/packing_context_init.go.tmpl
@@ -35,9 +35,8 @@
         if field{{ $field.Name }}Context, ok := childrenNodes[{{ $index }}].Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}]); !ok {
             return errors.New("unknown context type")
         } else {
-
             traits := {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}
-            field{{ $field.Name }}Context.Init(&traits, {{ goType $scope $native.Type }}({{ $field_name }}))
+            field{{ $field.Name }}Context.Init(traits, {{ goType $scope $native.Type }}({{ $field_name }}))
         }
     {{- end }}
 
